[build-system]
requires = ["setuptools >= 40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ezq"
version = "3.0.3"
description = "Simple wrapper for python multiprocessing and threading."
keywords = ["queue", "worker", "multiprocessing", "threading"]
requires-python = ">=3.8"
dependencies = [
  # library dependencies support a range
  "multiprocess~=0.70.14",
]
optional-dependencies = { dev = [
  # dev dependencies are latest
  "black",
  "coverage",
  "mypy",
  "pdoc3",
  "pytest",
  "pytest-cov",
  "ruff",
] }
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Metaist LLC", email = "metaist@metaist.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/metaist/ezq"
Documentation = "https://metaist.github.io/ezq/"
Repository = "https://github.com/metaist/ezq.git"
Changelog = "https://github.com/metaist/ezq/blob/main/CHANGELOG.md"
